--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Horiseon</title>
 </head>
 
 <body>
     <header>
-        <h1>Horiseon</h1>
+        <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
             <ul>
                 <li>
@@ -25,20 +25,20 @@
         </nav>
     </header>
     <div class="hero"></div>
-    <div class="content">
-        <section id="search-engine-optimization" class="search-engine-optimization">
+    <main>
+        <section id="search-engine-optimization" class="service">
             <img src="./assets/images/search-engine-optimization.jpg"
-                alt="A notebook with SEO written on it, a cup of coffee, and a keyboard on a desk" class="float-left" />
+                alt="Notebook with search engine optimization concepts on cover on a cluttered wooden table."
+                class="float-left" />
             <h2>Search Engine Optimization</h2>
-            <p>
-                The dominance of mobile internet use means that users are searching for the right business as they
+            <p>The dominance of mobile internet use means that users are searching for the right business as they
                 travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase
-                your visibility and find the right customers for your business.
-            </p>
+                your visibility and find the right customers for your business.</p>
         </section>
-        <section id="online-reputation-management" class="online-reputation-management">
+        <section id="online-reputation-management" class="service">
             <img src="./assets/images/online-reputation-management.jpg"
-                alt="An open laptop with the word Reputation written on the screen" class="float-right" />
+                alt="Person checking cell phone while looking at a laptop showing a graph of increasing online reputation."
+                class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an
@@ -46,52 +46,42 @@
                 you the control over what potential customers see when they search for your business.
             </p>
         </section>
-        <section id="social-media-marketing" class="social-media-marketing">
+        <section id="social-media-marketing" class="service">
             <img src="./assets/images/social-media-marketing.jpg"
-                alt="Conference table with many hands on keyboards, surrounded by marketing materials"
+                alt="Large solar panels in a green field of plants with a blue sky and light white clouds above it."
                 class="float-left" />
             <h2>Social Media Marketing</h2>
-            <p>
-                Social media continues to have a sizable influence on buying habits. Social media marketing helps you
+            <p>Social media continues to have a sizable influence on buying habits. Social media marketing helps you
                 determine which platforms are suited to your brand, using analytics to find the right markets and
-                increase your lead generation.
-            </p>
+                increase your lead generation.</p>
         </section>
-    </div>
+    </main>
     <aside class="benefits">
-        <div class="benefit-lead">
+        <div class="benefit">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png"
-                alt="lead generation icon, with a sun being funneled down to an American dollar sign" />
-            <p>
-                Inbound strategies for lead generation require less work for your business, bringing customers directly
-                to your website.
-            </p>
+                alt="Several people using devices sitting at a table cluttered with social media icons and actions such as Tweet, Share, and Like." />
+            <p>Inbound strategies for lead generation require less work for your business, bringing customers directly
+                to your website.</p>
         </div>
-        <div class="benefit-brand">
+        <div class="benefit">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png"
-                alt="brand awareness icon, with a torso in a suit and a lightbulb where a head would normally be" />
-            <p>
-                Users find your business through paid and organic searches, increasing the search ranking and visibility
-                for your business.
-            </p>
+                alt="Black icon of a person with a lightbulb for a head emitting waves." />
+            <p>Users find your business through paid and organic searches, increasing the search ranking and visibility
+                for your business.</p>
         </div>
-        <div class="benefit-cost">
+        <div class="benefit">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png"
-                alt="cost management icon, a large gear with three American dollar signs in front of it" />
-            <p>
-                As the search ranking for your business increases, your advertising costs decrease, and you no longer
-                need to advertise your page.
-            </p>
+                alt="Black icon of a gear surrounded by three coins with American dollar signs on them." />
+            <p>As the search ranking for your business increases, your advertising costs decrease, and you no longer
+                need to advertise your page.</p>
         </div>
     </aside>
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
-        <p>
-            &copy; 2019 Horiseon Social Solution Services, Inc.
-        </p>
+        <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
     </footer>
 </body>
 
